// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ERC20TransferSummary Should match snapshot 1`] = `
<div>
   
  <div
    class="sc-fubCzh sc-iqHYmW sc-crrszt iYPEgl clDCyI lolBCJ"
  >
    interactWith
     
    <span>
      0.0
       
      ETH
    </span>
    :
  </div>
  <div
    class="sc-fubCzh sc-iqHYmW iYPEgl clDCyI"
  >
    <div
      class="sc-fubCzh sc-iqHYmW sc-dQoVA iYPEgl clDCyI bPyyBI"
    >
      <span
        class="sc-gKseQn lnpFdR"
      >
        <img
          alt="Avatar"
          class="sc-eCstlR sc-jSgvzq ebJAYl bmPvYM"
          data-testid="avatar"
          size="24"
          src="test"
        />
      </span>
      <a
        class="sc-kstqJO la-djAS"
        rel="noopener"
        target="_blank"
      >
        test.eth
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
          />
          <path
            d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
          />
        </svg>
      </a>
    </div>
  </div>
   
</div>
`;

exports[`ERC20TransferSummary Should match snapshot with default values 1`] = `
<div>
   
  <div
    class="sc-fubCzh sc-iqHYmW sc-crrszt iYPEgl clDCyI lolBCJ"
  >
    interactWith
     
    <span>
      0.0
       
      ETH
    </span>
    :
  </div>
  <div
    class="sc-fubCzh sc-iqHYmW iYPEgl clDCyI"
  >
    <div
      class="sc-fubCzh sc-iqHYmW sc-dQoVA iYPEgl clDCyI bPyyBI"
    >
      <span
        class="sc-gKseQn lnpFdR"
      >
        <img
          alt="Avatar"
          class="sc-eCstlR sc-jSgvzq ebJAYl bmPvYM"
          data-testid="avatar"
          size="24"
          src="test"
        />
      </span>
      <a
        class="sc-kstqJO la-djAS"
        rel="noopener"
        target="_blank"
      >
        test.eth
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
          />
          <path
            d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
          />
        </svg>
      </a>
    </div>
  </div>
   
</div>
`;

exports[`ERC20TransferSummary Should match snapshot without data 1`] = `
<div>
   
  <div
    class="sc-fubCzh sc-iqHYmW sc-crrszt iYPEgl clDCyI lolBCJ"
  >
    interactWith
     
    <span
      class="sc-bqyKOL jpIhKt"
    >
       
      ETH
    </span>
    :
  </div>
  <div
    class="sc-fubCzh sc-iqHYmW iYPEgl clDCyI"
  >
    <div
      class="sc-fubCzh sc-iqHYmW sc-dQoVA iYPEgl clDCyI bPyyBI"
    >
      <span
        class="sc-gKseQn lnpFdR"
      >
        <img
          alt="Avatar"
          class="sc-eCstlR sc-jSgvzq ebJAYl bmPvYM"
          data-testid="avatar"
          size="24"
          src="test"
        />
      </span>
      <a
        class="sc-kstqJO la-djAS"
        rel="noopener"
        target="_blank"
      >
        test.eth
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
          />
          <path
            d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
          />
        </svg>
      </a>
    </div>
  </div>
   
</div>
`;
